--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.learning.spring'
+group = 'com.github.mrptqp'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -36,4 +36,14 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+bootJar {
+    mainClassName = 'com.github.mrptqp.githubapiwrapper.GithubApiWrapperApplication'
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "com.github.mrptqp.githubapiwrapper.GithubApiWrapperApplication"
+    }
 }
